exports[`relative-url-style > invalid(1): <a href=\"./page.html?a=1&amp;b=2\">link</a> 1`] = `

  1 | <a href="./page.html?a=1&amp;b=2">link</a>

`;

exports[`relative-url-style > invalid(1): <a href=\"./page.html?a=1&amp;b=2\">link</a> 2`] = `

Message:
> 1 | <a href="./page.html?a=1&amp;b=2">link</a>
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <a href="page.html?a=1&amp;b=2">link</a>

`;

exports[`relative-url-style > invalid(1): <img srcset=\"./image.png 1x, ./image@2x.png 2x\"> 1`] = `

  1 | <img srcset="./image.png 1x, ./image@2x.png 2x">

`;

exports[`relative-url-style > invalid(1): <img srcset=\"./image.png 1x, ./image@2x.png 2x\"> 2`] = `

Message:
> 1 | <img srcset="./image.png 1x, ./image@2x.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset="image.png 1x, ./image@2x.png 2x">

`;

exports[`relative-url-style > invalid(1): <img srcset=\"./image.png 1x, ./image@2x.png 2x\"> 3`] = `

Message:
> 1 | <img srcset="./image.png 1x, ./image@2x.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset="./image.png 1x, image@2x.png 2x">

`;

exports[`relative-url-style > invalid(1): @document url(\"./page.html\") { a { background: url(\"./image.png\"); } } 1`] = `

  1 | @document url("./page.html") { a { background: url("./image.png"); } }

`;

exports[`relative-url-style > invalid(1): @document url(\"./page.html\") { a { background: url(\"./image.png\"); } } 2`] = `

Message:
> 1 | @document url("./page.html") { a { background: url("./image.png"); } }
    |                                                ^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @document url("./page.html") { a { background: url("image.png"); } }

`;

exports[`relative-url-style > invalid(1): @import \"./style.css\"; 1`] = `

  1 | @import "./style.css";

`;

exports[`relative-url-style > invalid(1): @import \"./style.css\"; 2`] = `

Message:
> 1 | @import "./style.css";
    |         ^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @import "style.css";

`;

exports[`relative-url-style > invalid(1): [label \\]](./page.md) 1`] = `

  1 | [label \\]](./page.md)

`;

exports[`relative-url-style > invalid(1): [label \\]](./page.md) 2`] = `

Message:
> 1 | [label \\]](./page.md)
    | ^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [label \\]](page.md)

`;

exports[`relative-url-style > invalid(1): [link](./page.md) 1`] = `

  1 | [link](./page.md)

`;

exports[`relative-url-style > invalid(1): [link](./page.md) 2`] = `

Message:
> 1 | [link](./page.md)
    | ^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [link](page.md)

`;

exports[`relative-url-style > invalid(1): a { background: url(./image.png) } 1`] = `

  1 | a { background: url(./image.png) }

`;

exports[`relative-url-style > invalid(1): a { background: url(./image.png) } 2`] = `

Message:
> 1 | a { background: url(./image.png) }
    |                 ^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | a { background: url(image.png) }

`;

exports[`relative-url-style > invalid(1): new URL(\"./foo\", base) 1`] = `

  1 | new URL("./foo", base)

`;

exports[`relative-url-style > invalid(1): new URL(\"./foo\", base) 2`] = `

Message:
> 1 | new URL("./foo", base)
    |         ^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | new URL("foo", base)

`;

exports[`relative-url-style > invalid(1): new URL(\"foo\", base) 1`] = `

Options:
- 'always'

Code:
  1 | new URL("foo", base)

`;

exports[`relative-url-style > invalid(1): new URL(\"foo\", base) 2`] = `

Message:
> 1 | new URL("foo", base)
    |         ^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | new URL("./foo", base)

`;

exports[`relative-url-style > invalid(10): <img srcset=\"image,one.png 1x, image,two.png 2x\"> 1`] = `

Options:
- 'always'

Code:
  1 | <img srcset="image,one.png 1x, image,two.png 2x">

`;

exports[`relative-url-style > invalid(10): <img srcset=\"image,one.png 1x, image,two.png 2x\"> 2`] = `

Message:
> 1 | <img srcset="image,one.png 1x, image,two.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset="./image,one.png 1x, image,two.png 2x">

`;

exports[`relative-url-style > invalid(10): <img srcset=\"image,one.png 1x, image,two.png 2x\"> 3`] = `

Message:
> 1 | <img srcset="image,one.png 1x, image,two.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset="image,one.png 1x, ./image,two.png 2x">

`;

exports[`relative-url-style > invalid(11): <img srcset=./%2Cimage.png> 1`] = `

  1 | <img srcset=./%2Cimage.png>

`;

exports[`relative-url-style > invalid(11): <img srcset=./%2Cimage.png> 2`] = `

Message:
> 1 | <img srcset=./%2Cimage.png>
    |      ^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset=%2Cimage.png>

`;

exports[`relative-url-style > invalid(12): <img srcset=././,image.png> 1`] = `

  1 | <img srcset=././,image.png>

`;

exports[`relative-url-style > invalid(12): <img srcset=././,image.png> 2`] = `

Message:
> 1 | <img srcset=././,image.png>
    |      ^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset=./,image.png>

`;

exports[`relative-url-style > invalid(13): <img srcset=\"./,image.png 1x, ./other.png 2x\"> 1`] = `

  1 | <img srcset="./,image.png 1x, ./other.png 2x">

`;

exports[`relative-url-style > invalid(13): <img srcset=\"./,image.png 1x, ./other.png 2x\"> 2`] = `

Message:
> 1 | <img srcset="./,image.png 1x, ./other.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset="./,image.png 1x, other.png 2x">

`;

exports[`relative-url-style > invalid(14): <img srcset=,image.png> 1`] = `

Options:
- 'always'

Code:
  1 | <img srcset=,image.png>

`;

exports[`relative-url-style > invalid(14): <img srcset=,image.png> 2`] = `

Message:
> 1 | <img srcset=,image.png>
    |      ^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset=,./image.png>

`;

exports[`relative-url-style > invalid(15): <img srcset=\" ,\timage.png 1x, , large.png 2x\"> 1`] = `

Options:
- 'always'

Code:
  1 | <img srcset=" ,	image.png 1x, , large.png 2x">

`;

exports[`relative-url-style > invalid(15): <img srcset=\" ,\timage.png 1x, , large.png 2x\"> 2`] = `

Message:
> 1 | <img srcset=" ,	image.png 1x, , large.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset=" ,	./image.png 1x, , large.png 2x">

`;

exports[`relative-url-style > invalid(15): <img srcset=\" ,\timage.png 1x, , large.png 2x\"> 3`] = `

Message:
> 1 | <img srcset=" ,	image.png 1x, , large.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset=" ,	image.png 1x, , ./large.png 2x">

`;

exports[`relative-url-style > invalid(2): ![image](./image.png \"title\") 1`] = `

  1 | ![image](./image.png "title")

`;

exports[`relative-url-style > invalid(2): ![image](./image.png \"title\") 2`] = `

Message:
> 1 | ![image](./image.png "title")
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | ![image](image.png "title")

`;

exports[`relative-url-style > invalid(2): <img SRC=\"./image.png\"> 1`] = `

  1 | <img SRC="./image.png">

`;

exports[`relative-url-style > invalid(2): <img SRC=\"./image.png\"> 2`] = `

Message:
> 1 | <img SRC="./image.png">
    |      ^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img SRC="image.png">

`;

exports[`relative-url-style > invalid(2): <link rel=\"preload\" as=\"image\" imagesrcset=\"./small.png 1x, ./large.png 2x\"> 1`] = `

  1 | <link rel="preload" as="image" imagesrcset="./small.png 1x, ./large.png 2x">

`;

exports[`relative-url-style > invalid(2): <link rel=\"preload\" as=\"image\" imagesrcset=\"./small.png 1x, ./large.png 2x\"> 2`] = `

Message:
> 1 | <link rel="preload" as="image" imagesrcset="./small.png 1x, ./large.png 2x">
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <link rel="preload" as="image" imagesrcset="small.png 1x, ./large.png 2x">

`;

exports[`relative-url-style > invalid(2): <link rel=\"preload\" as=\"image\" imagesrcset=\"./small.png 1x, ./large.png 2x\"> 3`] = `

Message:
> 1 | <link rel="preload" as="image" imagesrcset="./small.png 1x, ./large.png 2x">
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <link rel="preload" as="image" imagesrcset="./small.png 1x, large.png 2x">

`;

exports[`relative-url-style > invalid(2): @\\69mport \"./style.css\"; 1`] = `

  1 | @\\69mport "./style.css";

`;

exports[`relative-url-style > invalid(2): @\\69mport \"./style.css\"; 2`] = `

Message:
> 1 | @\\69mport "./style.css";
    |           ^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @\\69mport "style.css";

`;

exports[`relative-url-style > invalid(2): @media screen { a { background: url(\"image.png\"); } } 1`] = `

Options:
- 'always'

Code:
  1 | @media screen { a { background: url("image.png"); } }

`;

exports[`relative-url-style > invalid(2): @media screen { a { background: url(\"image.png\"); } } 2`] = `

Message:
> 1 | @media screen { a { background: url("image.png"); } }
    |                                 ^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | @media screen { a { background: url("./image.png"); } }

`;

exports[`relative-url-style > invalid(2): [link](./page.md) 1`] = `

  1 | [link](./page.md)

`;

exports[`relative-url-style > invalid(2): [link](./page.md) 2`] = `

Message:
> 1 | [link](./page.md)
    | ^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [link](page.md)

`;

exports[`relative-url-style > invalid(2): a { background: image-set(\"./small.png\" 1x, \"./large.png\" 2x) } 1`] = `

  1 | a { background: image-set("./small.png" 1x, "./large.png" 2x) }

`;

exports[`relative-url-style > invalid(2): a { background: image-set(\"./small.png\" 1x, \"./large.png\" 2x) } 2`] = `

Message:
> 1 | a { background: image-set("./small.png" 1x, "./large.png" 2x) }
    |                           ^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | a { background: image-set("small.png" 1x, "./large.png" 2x) }

`;

exports[`relative-url-style > invalid(2): a { background: image-set(\"./small.png\" 1x, \"./large.png\" 2x) } 3`] = `

Message:
> 1 | a { background: image-set("./small.png" 1x, "./large.png" 2x) }
    |                                             ^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | a { background: image-set("./small.png" 1x, "large.png" 2x) }

`;

exports[`relative-url-style > invalid(2): const base = {value: 'https://example.com/'};\nObject.defineProperty(base, 'value', {get() { return 'https://example.com/a/b/'; }});\nnew URL('./foo', base.value); 1`] = `

  1 | const base = {value: 'https://example.com/'};
  2 | Object.defineProperty(base, 'value', {get() { return 'https://example.com/a/b/'; }});
  3 | new URL('./foo', base.value);

`;

exports[`relative-url-style > invalid(2): const base = {value: 'https://example.com/'};\nObject.defineProperty(base, 'value', {get() { return 'https://example.com/a/b/'; }});\nnew URL('./foo', base.value); 2`] = `

Message:
  1 | const base = {value: 'https://example.com/'};
  2 | Object.defineProperty(base, 'value', {get() { return 'https://example.com/a/b/'; }});
> 3 | new URL('./foo', base.value);
    |         ^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | const base = {value: 'https://example.com/'};
  2 | Object.defineProperty(base, 'value', {get() { return 'https://example.com/a/b/'; }});
  3 | new URL('foo', base.value);

`;

exports[`relative-url-style > invalid(2): new URL('foo', base) 1`] = `

Options:
- 'always'

Code:
  1 | new URL('foo', base)

`;

exports[`relative-url-style > invalid(2): new URL('foo', base) 2`] = `

Message:
> 1 | new URL('foo', base)
    |         ^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | new URL('./foo', base)

`;

exports[`relative-url-style > invalid(3): <link rel=\"preload\" as=\"image\" imagesrcset=\"small.png 1x, large.png 2x\"> 1`] = `

Options:
- 'always'

Code:
  1 | <link rel="preload" as="image" imagesrcset="small.png 1x, large.png 2x">

`;

exports[`relative-url-style > invalid(3): <link rel=\"preload\" as=\"image\" imagesrcset=\"small.png 1x, large.png 2x\"> 2`] = `

Message:
> 1 | <link rel="preload" as="image" imagesrcset="small.png 1x, large.png 2x">
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <link rel="preload" as="image" imagesrcset="./small.png 1x, large.png 2x">

`;

exports[`relative-url-style > invalid(3): <link rel=\"preload\" as=\"image\" imagesrcset=\"small.png 1x, large.png 2x\"> 3`] = `

Message:
> 1 | <link rel="preload" as="image" imagesrcset="small.png 1x, large.png 2x">
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <link rel="preload" as="image" imagesrcset="small.png 1x, ./large.png 2x">

`;

exports[`relative-url-style > invalid(3): <video poster=\"./poster.png\"></video> 1`] = `

  1 | <video poster="./poster.png"></video>

`;

exports[`relative-url-style > invalid(3): <video poster=\"./poster.png\"></video> 2`] = `

Message:
> 1 | <video poster="./poster.png"></video>
    |        ^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <video poster="poster.png"></video>

`;

exports[`relative-url-style > invalid(3): @\\69mport url(\"./style.css\"); 1`] = `

  1 | @\\69mport url("./style.css");

`;

exports[`relative-url-style > invalid(3): @\\69mport url(\"./style.css\"); 2`] = `

Message:
> 1 | @\\69mport url("./style.css");
    |           ^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @\\69mport url("style.css");

`;

exports[`relative-url-style > invalid(3): [![image](./image.png)](./page.md) 1`] = `

  1 | [![image](./image.png)](./page.md)

`;

exports[`relative-url-style > invalid(3): [![image](./image.png)](./page.md) 2`] = `

Message:
> 1 | [![image](./image.png)](./page.md)
    |  ^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [![image](image.png)](./page.md)

`;

exports[`relative-url-style > invalid(3): [link](<./page with spaces.md>) 1`] = `

  1 | [link](<./page with spaces.md>)

`;

exports[`relative-url-style > invalid(3): [link](<./page with spaces.md>) 2`] = `

Message:
> 1 | [link](<./page with spaces.md>)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [link](<page with spaces.md>)

`;

exports[`relative-url-style > invalid(3): a { background: -webkit-image-set(\"small.png\" 1x) } 1`] = `

Options:
- 'always'

Code:
  1 | a { background: -webkit-image-set("small.png" 1x) }

`;

exports[`relative-url-style > invalid(3): a { background: -webkit-image-set(\"small.png\" 1x) } 2`] = `

Message:
> 1 | a { background: -webkit-image-set("small.png" 1x) }
    |                                   ^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | a { background: -webkit-image-set("./small.png" 1x) }

`;

exports[`relative-url-style > invalid(3): new URL('./foo', base) 1`] = `

  1 | new URL('./foo', base)

`;

exports[`relative-url-style > invalid(3): new URL('./foo', base) 2`] = `

Message:
> 1 | new URL('./foo', base)
    |         ^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | new URL('foo', base)

`;

exports[`relative-url-style > invalid(3): new URL(\"\", \"https://example.com/a/b/\") 1`] = `

Options:
- 'always'

Code:
  1 | new URL("", "https://example.com/a/b/")

`;

exports[`relative-url-style > invalid(3): new URL(\"\", \"https://example.com/a/b/\") 2`] = `

Message:
> 1 | new URL("", "https://example.com/a/b/")
    |         ^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | new URL("./", "https://example.com/a/b/")

`;

exports[`relative-url-style > invalid(4): <a href=./page.html>link</a> 1`] = `

  1 | <a href=./page.html>link</a>

`;

exports[`relative-url-style > invalid(4): <a href=./page.html>link</a> 2`] = `

Message:
> 1 | <a href=./page.html>link</a>
    |    ^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <a href=page.html>link</a>

`;

exports[`relative-url-style > invalid(4): <source SRCSET=\" ./small.png 320w,\n\t./large.png 640w \"> 1`] = `

  1 | <source SRCSET=" ./small.png 320w,
  2 | 	./large.png 640w ">

`;

exports[`relative-url-style > invalid(4): <source SRCSET=\" ./small.png 320w,\n\t./large.png 640w \"> 2`] = `

Message:
> 1 | <source SRCSET=" ./small.png 320w,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	./large.png 640w ">
    | ^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <source SRCSET=" small.png 320w,
  2 | 	./large.png 640w ">

`;

exports[`relative-url-style > invalid(4): <source SRCSET=\" ./small.png 320w,\n\t./large.png 640w \"> 3`] = `

Message:
> 1 | <source SRCSET=" ./small.png 320w,
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
> 2 | 	./large.png 640w ">
    | ^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <source SRCSET=" ./small.png 320w,
  2 | 	large.png 640w ">

`;

exports[`relative-url-style > invalid(4): @IMPORT /* keep */ './style.css' layer(theme) screen; 1`] = `

  1 | @IMPORT /* keep */ './style.css' layer(theme) screen;

`;

exports[`relative-url-style > invalid(4): @IMPORT /* keep */ './style.css' layer(theme) screen; 2`] = `

Message:
> 1 | @IMPORT /* keep */ './style.css' layer(theme) screen;
    |                    ^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @IMPORT /* keep */ 'style.css' layer(theme) screen;

`;

exports[`relative-url-style > invalid(4): [link](./page\\(1\\).md) 1`] = `

  1 | [link](./page\\(1\\).md)

`;

exports[`relative-url-style > invalid(4): [link](./page\\(1\\).md) 2`] = `

Message:
> 1 | [link](./page\\(1\\).md)
    | ^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [link](page\\(1\\).md)

`;

exports[`relative-url-style > invalid(4): a { background: image-set(\"small.png\" 1x type(\"image/png\")) } 1`] = `

Options:
- 'always'

Code:
  1 | a { background: image-set("small.png" 1x type("image/png")) }

`;

exports[`relative-url-style > invalid(4): a { background: image-set(\"small.png\" 1x type(\"image/png\")) } 2`] = `

Message:
> 1 | a { background: image-set("small.png" 1x type("image/png")) }
    |                           ^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | a { background: image-set("./small.png" 1x type("image/png")) }

`;

exports[`relative-url-style > invalid(4): new URL(\"././a\", base) 1`] = `

  1 | new URL("././a", base)

`;

exports[`relative-url-style > invalid(4): new URL(\"././a\", base) 2`] = `

Message:
> 1 | new URL("././a", base)
    |         ^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | new URL("./a", base)

`;

exports[`relative-url-style > invalid(5): <a href=\"  ./page.html  \">link</a> 1`] = `

  1 | <a href="  ./page.html  ">link</a>

`;

exports[`relative-url-style > invalid(5): <a href=\"  ./page.html  \">link</a> 2`] = `

Message:
> 1 | <a href="  ./page.html  ">link</a>
    |    ^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <a href="  page.html  ">link</a>

`;

exports[`relative-url-style > invalid(5): <img srcset=\"data:image/png;base64,abc 1x, ./large.png 2x\"> 1`] = `

  1 | <img srcset="data:image/png;base64,abc 1x, ./large.png 2x">

`;

exports[`relative-url-style > invalid(5): <img srcset=\"data:image/png;base64,abc 1x, ./large.png 2x\"> 2`] = `

Message:
> 1 | <img srcset="data:image/png;base64,abc 1x, ./large.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset="data:image/png;base64,abc 1x, large.png 2x">

`;

exports[`relative-url-style > invalid(5): @import \"./my\\20 style.css\" supports(display: grid); 1`] = `

  1 | @import "./my\\20 style.css" supports(display: grid);

`;

exports[`relative-url-style > invalid(5): @import \"./my\\20 style.css\" supports(display: grid); 2`] = `

Message:
> 1 | @import "./my\\20 style.css" supports(display: grid);
    |         ^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @import "my\\20 style.css" supports(display: grid);

`;

exports[`relative-url-style > invalid(5): [link][reference]\n\n[reference]: ./page.md 1`] = `

  1 | [link][reference]
  2 |
  3 | [reference]: ./page.md

`;

exports[`relative-url-style > invalid(5): [link][reference]\n\n[reference]: ./page.md 2`] = `

Message:
  1 | [link][reference]
  2 |
> 3 | [reference]: ./page.md
    | ^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | [link][reference]
  2 |
  3 | [reference]: page.md

`;

exports[`relative-url-style > invalid(5): a { background: url( \"./image.png\" ) } 1`] = `

  1 | a { background: url( "./image.png" ) }

`;

exports[`relative-url-style > invalid(5): a { background: url( \"./image.png\" ) } 2`] = `

Message:
> 1 | a { background: url( "./image.png" ) }
    |                 ^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | a { background: url( "image.png" ) }

`;

exports[`relative-url-style > invalid(5): new URL(\`./\${foo}\`, base) 1`] = `

  1 | new URL(\`./\${foo}\`, base)

`;

exports[`relative-url-style > invalid(5): new URL(\`./\${foo}\`, base) 2`] = `

Message:
> 1 | new URL(\`./\${foo}\`, base)
    |         ^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Suggestion 1/1: Remove leading \`./\`.:
  1 | new URL(\`\${foo}\`, base)

`;

exports[`relative-url-style > invalid(6): <img src=\"image.png\"> 1`] = `

Options:
- 'always'

Code:
  1 | <img src="image.png">

`;

exports[`relative-url-style > invalid(6): <img src=\"image.png\"> 2`] = `

Message:
> 1 | <img src="image.png">
    |      ^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img src="./image.png">

`;

exports[`relative-url-style > invalid(6): <img srcset=\"./one.png, ./two.png\"> 1`] = `

  1 | <img srcset="./one.png, ./two.png">

`;

exports[`relative-url-style > invalid(6): <img srcset=\"./one.png, ./two.png\"> 2`] = `

Message:
> 1 | <img srcset="./one.png, ./two.png">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset="one.png, ./two.png">

`;

exports[`relative-url-style > invalid(6): <img srcset=\"./one.png, ./two.png\"> 3`] = `

Message:
> 1 | <img srcset="./one.png, ./two.png">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset="./one.png, two.png">

`;

exports[`relative-url-style > invalid(6): @import \"style.css\"; 1`] = `

Options:
- 'always'

Code:
  1 | @import "style.css";

`;

exports[`relative-url-style > invalid(6): @import \"style.css\"; 2`] = `

Message:
> 1 | @import "style.css";
    |         ^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | @import "./style.css";

`;

exports[`relative-url-style > invalid(6): [link](page.md) 1`] = `

Options:
- 'always'

Code:
  1 | [link](page.md)

`;

exports[`relative-url-style > invalid(6): [link](page.md) 2`] = `

Message:
> 1 | [link](page.md)
    | ^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | [link](./page.md)

`;

exports[`relative-url-style > invalid(6): a { background: url(\"./a\\20 b.png\") } 1`] = `

  1 | a { background: url("./a\\20 b.png") }

`;

exports[`relative-url-style > invalid(6): a { background: url(\"./a\\20 b.png\") } 2`] = `

Message:
> 1 | a { background: url("./a\\20 b.png") }
    |                 ^^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | a { background: url("a\\20 b.png") }

`;

exports[`relative-url-style > invalid(6): new URL(\"./\", \"https://example.com/a/b/\") 1`] = `

  1 | new URL("./", "https://example.com/a/b/")

`;

exports[`relative-url-style > invalid(6): new URL(\"./\", \"https://example.com/a/b/\") 2`] = `

Message:
> 1 | new URL("./", "https://example.com/a/b/")
    |         ^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | new URL("", "https://example.com/a/b/")

`;

exports[`relative-url-style > invalid(7): ![image](image.png) 1`] = `

Options:
- 'always'

Code:
  1 | ![image](image.png)

`;

exports[`relative-url-style > invalid(7): ![image](image.png) 2`] = `

Message:
> 1 | ![image](image.png)
    | ^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | ![image](./image.png)

`;

exports[`relative-url-style > invalid(7): <a href=page.html>link</a> 1`] = `

Options:
- 'always'

Code:
  1 | <a href=page.html>link</a>

`;

exports[`relative-url-style > invalid(7): <a href=page.html>link</a> 2`] = `

Message:
> 1 | <a href=page.html>link</a>
    |    ^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <a href=./page.html>link</a>

`;

exports[`relative-url-style > invalid(7): <img srcset=./images/one.png> 1`] = `

  1 | <img srcset=./images/one.png>

`;

exports[`relative-url-style > invalid(7): <img srcset=./images/one.png> 2`] = `

Message:
> 1 | <img srcset=./images/one.png>
    |      ^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | <img srcset=images/one.png>

`;

exports[`relative-url-style > invalid(7): @import \"my\\20 style.css\"; 1`] = `

Options:
- 'always'

Code:
  1 | @import "my\\20 style.css";

`;

exports[`relative-url-style > invalid(7): @import \"my\\20 style.css\"; 2`] = `

Message:
> 1 | @import "my\\20 style.css";
    |         ^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | @import "./my\\20 style.css";

`;

exports[`relative-url-style > invalid(7): a { background: url(image.png) } 1`] = `

Options:
- 'always'

Code:
  1 | a { background: url(image.png) }

`;

exports[`relative-url-style > invalid(7): a { background: url(image.png) } 2`] = `

Message:
> 1 | a { background: url(image.png) }
    |                 ^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | a { background: url(./image.png) }

`;

exports[`relative-url-style > invalid(8): <img srcset=\"small.png 320w, large.png 640w\"> 1`] = `

Options:
- 'always'

Code:
  1 | <img srcset="small.png 320w, large.png 640w">

`;

exports[`relative-url-style > invalid(8): <img srcset=\"small.png 320w, large.png 640w\"> 2`] = `

Message:
> 1 | <img srcset="small.png 320w, large.png 640w">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset="./small.png 320w, large.png 640w">

`;

exports[`relative-url-style > invalid(8): <img srcset=\"small.png 320w, large.png 640w\"> 3`] = `

Message:
> 1 | <img srcset="small.png 320w, large.png 640w">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset="small.png 320w, ./large.png 640w">

`;

exports[`relative-url-style > invalid(8): [link](<page with spaces.md>) 1`] = `

Options:
- 'always'

Code:
  1 | [link](<page with spaces.md>)

`;

exports[`relative-url-style > invalid(8): [link](<page with spaces.md>) 2`] = `

Message:
> 1 | [link](<page with spaces.md>)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | [link](<./page with spaces.md>)

`;

exports[`relative-url-style > invalid(8): a { background: url(\"a\\20 b.png\") } 1`] = `

Options:
- 'always'

Code:
  1 | a { background: url("a\\20 b.png") }

`;

exports[`relative-url-style > invalid(8): a { background: url(\"a\\20 b.png\") } 2`] = `

Message:
> 1 | a { background: url("a\\20 b.png") }
    |                 ^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | a { background: url("./a\\20 b.png") }

`;

exports[`relative-url-style > invalid(9): <img srcset=\"data:image/png;base64,abc 1x, large.png 2x\"> 1`] = `

Options:
- 'always'

Code:
  1 | <img srcset="data:image/png;base64,abc 1x, large.png 2x">

`;

exports[`relative-url-style > invalid(9): <img srcset=\"data:image/png;base64,abc 1x, large.png 2x\"> 2`] = `

Message:
> 1 | <img srcset="data:image/png;base64,abc 1x, large.png 2x">
    |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Add a \`./\` prefix to the relative URL.

Output:
  1 | <img srcset="data:image/png;base64,abc 1x, ./large.png 2x">

`;

exports[`relative-url-style > invalid(9): @import url(\"./style.css\"); 1`] = `

  1 | @import url("./style.css");

`;

exports[`relative-url-style > invalid(9): @import url(\"./style.css\"); 2`] = `

Message:
> 1 | @import url("./style.css");
    |         ^^^^^^^^^^^^^^^^^^ Remove the \`./\` prefix from the relative URL.

Output:
  1 | @import url("style.css");

`;
